LJSUP-8105: FriendsTimes, extra margin fix
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@18669 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/ie.css
+++ b/htdocs/stc/ie.css
@@ -363,6 +363,12 @@ __________________________________________*/
 	zoom: 1;
 	}
 
+/* FriendsTimes
+----------------------------------------------- */
+.b-friendstimes-comments {
+	margin-top: -3px;
+	}
+
 /* Game who playing widget
 ----------------------------------------------- */
 .appwidget-gamewhoplaying .w-body,
